Multiple code improvements